[tool.poetry]
name = "niceml"
version = "0.1.2"
description = ""
authors = ["Denis Stalz-John <denis.stalz-john@codecentric.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
pandas = "1.5.0"
python-dotenv = "^1.0.0"
click = "^8.1.3"
opencv-python = "^4.7.0.72"
cython = "^0.29.34"
pyyaml = "^6.0"
pillow = "^9.5.0"
fastparquet = "^2023.2.0"
hydra-core = "^1.3.2"
pympler = "^1.0.1"
cattrs = "^22.2.0"
isodate = "^0.6.1"

scikit-learn = "^1.2.2"
pandera = "^0.14.5"
schema = "^0.7.5"
dagster = "1.3.2"
altair = {version = "^4.2.2", optional = true}
tensorflow-macos = { version = "2.9.0", optional = true}
streamlit = {version = "^1.22.0", optional = true}
tensorflow = {version = "2.9.0", optional = true}
tensorflow-metal = {version = "^0.8.0", optional = true}


[tool.poetry.extras]
tensorflow = ["tensorflow"]
tensorflow-macos = ["tensorflow-macos", "tensorflow-metal"]
visu = ["altair", "streamlit"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
