[tool.poetry]
name = "niceml"
version = "0.6.1"
description = "Welcome to niceML 🍦, a Python-based MLOps framework that uses TensorFlow and Dagster. This framework streamlines the development, and maintenance of machine learning models, providing an end-to-end solution for building efficient and scalable pipelines."
authors = [
    "Denis Stalz-John <denis.stalz-john@codecentric.de>",
    "Nils Uhrberg <nils.uhrberg@codecentric.de>",
    "Anke Koke <anke.koke@codecentric.de>"
]
readme = "README.md"
keywords = ["tensorflow", "scikit-learn", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
packages = [
    {include = "niceml"},
    {include = "niceml/py.typed"}
]

[tool.poetry.urls]
"homepage" = "https://niceml.io"
"repository" = "https://github.com/codecentric-oss/niceml"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
pandas = "1.5.0"
python-dotenv = "^1.0.0"
click = "^8.1.3"
opencv-python = "^4.7.0.72"
cython = "^0.29.34"
pyyaml = "^6.0"
pillow = "^9.5.0"
fastparquet = "^2023.2.0"
hydra-core = "^1.3.2"
pympler = "^1.0.1"
cattrs = "^22.2.0"
isodate = "^0.6.1"
scikit-learn = "^1.2.2"
pandera = "^0.14.5"
schema = "^0.7.5"
copier = "^7.2.0"
dagster = "~1.3.13"
tornado = "^6.3.2"
networkx = "^3.1"
mkdocs-gen-files = "^0.5.0"
toml = "^0.10.2"
invoke = ">=1.4.1,<2"
dagit = "^1.3.3"
albumentations = "^1.3.0"
scipy = ">=1.8"
protobuf = "^3.0.0"


altair = {version = "^4.2.2", optional = true}
tensorflow-macos = {version = "2.8.0", optional = true}
streamlit = {version = "^1.22.0", optional = true}
tensorflow = {version = "2.8.0", optional = true}
tensorflow-metal = {version = "0.4.0", optional = true}
tensorflow-io-gcs-filesystem = {version = "0.31.0", optional = true}
pydantic = "<2.0"
cryptography = "^41.0.0"
requests = "^2.31.0"


[tool.poetry.extras]
tensorflow = ["tensorflow"]
tensorflow-windows = ["tensorflow","tensorflow-io-gcs-filesystem"]
tensorflow-macos = ["tensorflow-macos", "tensorflow-metal"]
visu = ["altair", "streamlit"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
python-semantic-release = "^7.33.3"
pre-commit = "^3.3.1"
black = "^23.3.0"
mkdocs-material = "^9.1.9"
mkdocstrings = "^0.21.2"
mdx-include = "^1.4.2"
mkdocs = "^1.4.3"
mkdocs-table-reader-plugin = "^2.0"

[tool.ruff]
select = ["E","F","D100", "D101","D102", "D103","D105","D106","D107","PT","PL"]
fixable = ["E","F","D","PT","PL"]
exclude = ["./tests/**"]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "niceml/__init__.py:__version__",
    "pyproject.toml:tool.poetry.version"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]

version_source="tag"
commit_version_number = true
major_on_zero = false
branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "poetry build"
repository = "pypi"
commit_subject="New release with version {version}"
commit_author="github-actions <action@github.com>"

[tool.poetry.scripts]
niceml = 'niceml.cli.climain:program.run'
