[tool.poetry]
name = "niceml"
version = "0.17.0-dev.1"
description = "Welcome to niceML 🍦, a Python-based MLOps framework that uses TensorFlow and Dagster. This framework streamlines the development, and maintenance of machine learning models, providing an end-to-end solution for building efficient and scalable pipelines."
authors = [
    "Denis Stalz-John <denis.stalz-john@codecentric.de>",
    "Nils Uhrberg <nils.uhrberg@codecentric.de>",
    "Anke Koke <anke.koke@codecentric.de>"
]
readme = "README.md"
keywords = ["tensorflow", "scikit-learn", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
packages = [
    {include = "niceml"},
    {include = "niceml/py.typed"}
]

[tool.poetry.urls]
"homepage" = "https://niceml.io"
"repository" = "https://github.com/codecentric-oss/niceml"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
pandas = ">=1.5.0"
numpy = "<2.0"
python-dotenv = ">=1.0.0"
click = ">=8.1.3"
opencv-python = ">=4.7.0.72"
cython = ">=0.29.34"
pyyaml = ">=6.0"
pillow = ">=10.1.0"
fastparquet = ">=2023.2.0"
hydra-core = ">=1.3.2"
pympler = ">=1.0.1"
cattrs = ">=22.2.0"
isodate = ">=0.6.1"
scikit-learn = ">=1.2.2"
pandera = ">=0.14.5"
schema = ">=0.7.5"
copier = ">=7.2.0"
dagster = "~1.6.0"
tornado = ">=6.3.2"
networkx = ">=3.1"
mkdocs-gen-files = ">=0.5.0"
toml = ">=0.10.2"
invoke = ">=1.4.1,<2"
dagit = ">=1.3.3"
albumentations = ">=1.3.0"
scipy = ">=1.8"
protobuf = ">=3.0.0"


altair = {version = ">=5.2.0", optional = true}
tensorflow-macos = {version = ">=2.13,<=2.14", optional = true}
streamlit = {version = ">=1.28.0", optional = true}
tensorflow = {version = ">=2.13,<=2.15", optional = true}
tensorflow-metal = {version = ">=1.0.0", optional = true}
requests = ">=2.31.0"
cryptography = ">=42.0.0"
dagster-mlflow = "~0.22.0"
grpcio = ">=1.60.0"
pendulum = ">=2.0"
tensorflow-io-gcs-filesystem = { version="0.34.0", optional = true}


[tool.poetry.extras]
tensorflow = ["tensorflow","tensorflow-io-gcs-filesystem"]
tensorflow-macos = ["tensorflow-macos", "tensorflow-metal","tensorflow-io-gcs-filesystem"]
visu = ["altair", "streamlit"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1"
pytest-cov = ">=4.0.0"
python-semantic-release = ">=9.8.1"
pre-commit = ">=3.3.1"
black = ">=24.0.0"
mkdocs-material = ">=9.1.9"
mkdocstrings = ">=0.21.2"
mdx-include = ">=1.4.2"
mkdocs = ">=1.4.3"
mkdocs-table-reader-plugin = ">=2.0"
mkdocstrings-python = ">=1.2.0"
mkdocs-literate-nav = ">=0.6.0"
mkdocs-section-index = ">=0.3.5"

[tool.ruff]
select = ["E","F","D100", "D101","D102", "D103","D105","D106","D107","PT","PL"]
fixable = ["E","F","D","PT","PL"]
exclude = ["./tests/**"]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
niceml = 'niceml.cli.climain:program.run'

[tool.semantic_release]
assets = []
build_command = "poetry build"
build_command_env = []
version_variables = [
    "niceml/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = false
allow_zero_version = true
no_git_verify = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease_token = "dev"
prerelease = true

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "github-actions <action@github.com>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
